minikube/routes-mqtt.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: thingsboard-ingress-mqtt-ingest
  namespace: thingsboard
spec:
  entryPoints:
    - mqtt
  routes:
    - match: HostSNI(`ingest.electrfy.se`)
      services:
        - name: tb-mqtt-transport
          namespace: thingsboard
          port: 1883
  tls:
    certResolver: letsencrypt
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: thingsboard-ingress-mqtt-iot
  namespace: thingsboard
spec:
  entryPoints:
    - mqtt
  routes:
    - match: HostSNI(`iot.electrfy.se`)
      services:
        - name: tb-mqtt-transport
          namespace: thingsboard
          port: 1883
  tls:
    certResolver: letsencrypt
---
