minikube/routes.yml
#
# Copyright © 2016-2020 The Thingsboard Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tb-ingress
  namespace: thingsboard
  annotations:
    #nginx.ingress.kubernetes.io/use-regex: "true"
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-issuer
spec:
  rules:
    - host: iot.electrfy.se
      http:
        paths:
          - path: /api/v1/
            pathType: Prefix
            backend:
              service:
                name: tb-http-transport
                port:
                  number: 8080
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: tb-node
                port:
                  number: 8080
          - path: /swagger
            pathType: Prefix
            backend:
              service:
                name: tb-node
                port:
                  number: 8080
          - path: /webjars
            pathType: Prefix
            backend:
              service:
                name: tb-node
                port:
                  number: 8080
          - path: /v2/
            pathType: Prefix
            backend:
              service:
                name: tb-node
                port:
                  number: 8080
          - path: /v3/
            pathType: Prefix
            backend:
              service:
                name: tb-node
                port:
                  number: 8080
          - path: /static/rulenode
            pathType: Prefix
            backend:
              service:
                name: tb-node
                port:
                  number: 8080
          - path: /static/rulenode/
            pathType: Prefix
            backend:
              service:
                name: tb-node
                port:
                  number: 8080
          - path: /assets/help/.*/rulenode/.*
            pathType: ImplementationSpecific
            backend:
              service:
                name: tb-node
                port:
                  number: 8080
          - path: /oauth2/
            pathType: Prefix
            backend:
              service:
                name: tb-node
                port:
                  number: 8080
          - path: /login/oauth2/
            pathType: Prefix
            backend:
              service:
                name: tb-node
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tb-web-ui
                port:
                  number: 8080
  tls:
    - secretName: thingsboard-cert
      hosts:
        - iot.electrfy.se
---
